[package]
name = "khipu"
version = "0.0.1"
authors = ["Karl Whitford <venirelabsinc@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
description = "A library for listening on Twitter Streaming API and parsing Sentiment."

[dependencies]
base64 = "0.10.1"
chrono = { version = "0.4.6", features = ["serde"] }
futures = "0.1.27"
hmac = "0.7.0"
hyper = "0.12.29"
hyper-rustls = { version = "0.16.1", optional = true }
hyper-tls = { version = "0.3.2", optional = true }
lazy_static = "1.3.0"
native-tls = { version = "0.2.3", optional = true }
mime = "0.3.13"
rand = "0.6.5"
regex = "1.1.6"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
sha-1 = "0.8.1"
tokio = "0.1.21"
url = "1.7.2"

[features]
default = ["native_tls"]
native_tls = ["native-tls", "hyper-tls"]

[dev-dependencies]
yansi = "0.5.0"

cargo-features = ["edition"]
